17 May 2018: mitmproxy 4.0

  ** Features **
    * mitmproxy now requires Python 3.6!
    * Moved the core to asyncio - which gives us a very significant performance boost!
    * Reduce memory consumption by using `SO_KEEPALIVE` (#3076)
    * Export request as httpie command (#3031)
    * Configure mitmproxy console keybindings with the keys.yaml file. See docs for more.

  ** Breaking Changes **
    * `allow_remote` got replaced by `block_global` and `block_private` (#3100)
    * No more custom events (#3093)
    * The `cadir` option has been renamed to `confdir`
    * We no longer magically capture print statements in addons and translate
    them to logs. Please use `ctx.log.info` explicitly.

  ** Bugfixes **
    * Correctly block connections from remote clients with IPv4-mapped IPv6 client addresses (#3099)
    * Expand `~` in paths during the `cut` command (#3078)
    * Remove socket listen backlog constraint
    * Improve handling of user script exceptions (#3050)
    * Ignore signal errors on windows
    * And lots of typos, docs improvements, revamped examples, and general fixes!

05 April 2018: mitmproxy 3.0.4

  * Fix an issue that caused mitmproxy to not retry HTTP requests on timeout.

  * Various other fixes (@kira0204, @fenilgandhi, @tran-tien-dat, @smonami,
  @luzpaz, @fristonio, @kajojify, @Oliver-Fish, @hcbarry, @jplochocki, @MikeShi42,
  @ghillu, @emilstahl)

25 February 2018: mitmproxy 3.0.3

  * Fix an issue that caused mitmproxy to lose keyboard control after spawning an external editor.

23 February 2018: mitmproxy 3.0.1

  * Fix a quote-related issue affecting the mitmproxy console command prompt.

22 February 2018: mitmproxy 3.0

  ** Major Changes **

  * Commands: A consistent, typed mechanism that allows addons to expose actions
  to users.

  * Options: A typed settings store for use by mitmproxy and addons.

  * Shift most of mitmproxy's own functionality into addons.
